# mlds23-authorship-identification

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  commands.py  compose.yaml  docker-compose.yaml  production.yaml  pyproject.toml  train.py
.dvc/: config
.ipynb_checkpoints/: README-checkpoint.md
0-data-acquisition/: README.md
0-data-collection/: parser.py  requirements.txt  test_task.txt
DL/: Fine_Tuning_BERT_for_Classification_DM.ipynb
EDA/: EDA_DM.ipynb  base-EDA-stats_(Dmitry).ipynb  eda_pos_topic_modeling.ipynb  stats-prepare-final.ipynb  stats-prepare-final_(Dmitriy).ipynb
GRAM_bot/: README.md
LLM_bot/: bot.py  model.py  model_test.py  requirements.txt  test_bot.py
ML/: Base_model_(D.Shiltsov).ipynb  Fine_Tuning_BERT_for_Classification_DM.ipynb  ML_DM.ipynb  kr-26-11-23-exp-1.ipynb  ticket_bot_example.ipynb
app/: Dockerfile  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: items.py  users.py
basic-eda/: base-EDA-stats.ipynb
bot/: Dockerfile  handlers.py  keyboards.py  main.py  models.py  states.py  utils.py
bot/routers/: items.py  users.py
conf/: config.yaml
conf/app/: fastapi.yaml
conf/app/host/: local.yaml
conf/cache/: docker.yaml
data/: split_1000_test.csv.dvc  split_1000_train.csv.dvc  splitted_df_1000.csv.dvc  splitted_df_2000.csv.dvc  splitted_df_3000.csv.dvc
data_collection/: README.md  requirements.txt
data_collection/notebooks/: example_task.txt  parser_use_example.ipynb
data_collection/notebooks/example_task_data/: aleksandr_pushkin_kapitanskaja_dochka.txt  fedor_dostoevskij_bednye_ljudi.txt  found_df.csv
data_collection/src/ilibparserpkg/: utils.py
data_preproc/notebooks/: text_preproc.ipynb  text_splitter.ipynb
data_preproc/src/: utils.py
data_preproc/utils/: utilsds.py
deployment/: bot.py  bot_2_0.py  main.py  models.py  preproc.py  requirements.txt  utils.py
deployment/LLM_bot/: main.py  requirements.txt  test.py
mlds23_authorship_identification/: classifiers.py  extractors.py  parser.py  preprocessing.py  transformers.py  utils.py
mlds23_authorship_identification/data/: splitter.py
mlds23_authorship_identification/models/: loader.py  postprocessing.py
models/: .gitignore  bow_stats_poly_lr.joblib.dvc
notebooks/: 01_parsing.ipynb  02_text2objects_split.ipynb  03_stats_extraction.ipynb  04-eda-shiltsov-punct-grams.ipynb  04_eda_kr_pos_topic_modeling.ipynb  04_text_preprocessing.ipynb  05-ml-shiltsov-different-models.ipynb  05_eda_dm_stats_ngrams.ipynb  05_eda_kr_pos_topic_modeling.ipynb  05_eda_shiltsov_punct_grams.ipynb  06_train_test_split.ipynb  07_ml_dm.ipynb  07_ml_shiltsov.ipynb  08_LLM.ipynb  08_dl_dm_bert_fine_tune.ipynb  08_dl_shiltsov_lstm.ipynb  08_finetune_LLM.ipynb
tests/: app_test.py  bot_test.py  extractor_test.py  preprocessing_test.py
