[tool.poetry]
name = "mlds23-authorship-identification"
version = "0.1.0"
description = "TBA"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
scikit-learn = "^1.4.0"
hydra-core = "^1.3.2"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"
dvc = "^3.45.0"
dvc-s3 = "^3.0.1"

[tool.poetry.group.ml.dependencies]
catboost = "^1.2.2"

[tool.poetry.group.dl.dependencies]
transformers = "^4.37.2"
torch = "^2.2.0"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
wandb = "^0.16.3"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.parser.dependencies]
transliterate = "^1.10.2"
selenium = "^4.17.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.eda.dependencies]
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
spacy = "^3.7.3"
gensim = "^4.3.2"



[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
coverage = "^7.4.1"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = ".flake8"

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
