[tool.poetry]
name = "mlds23-authorship-identification"
version = "0.1.0"
description = "Text authorship identification"
authors = [
    "Daria Mishina <dariamishina2812@gmail.com>",
    "Kirill Rubashevskiy <kirill.rubashevskiy@gmail.com>",
    "Dmitry Shiltsov <sda@asperito.ru>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = ">=1.4.3,<2.0.0"
nltk = "^3.8.1"
pymystem3 = "^0.2.0"
scikit-learn = "^1.4.0"
hydra-core = "^1.3.2"
pyarrow = "^15.0.0"
python-dotenv = "^1.0.1"
dvc = "^3.45.0"
dvc-s3 = "^3.0.1"
simplemma = "^0.9.1"


[tool.poetry.group.ml.dependencies]
catboost = "^1.2.2"
optuna = "^3.5.0"

[tool.poetry.group.dl.dependencies]
transformers = "^4.37.2"
torch = "^2.2.0"

[tool.poetry.group.bot.dependencies]
aiogram = "^3.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
wandb = "^0.16.3"
pre-commit = "^3.6.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.parser.dependencies]
transliterate = "^1.10.2"
selenium = "^4.17.2"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.eda.dependencies]
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
spacy = "^3.7.3"
gensim = "^4.3.2"
ruts = "^0.8.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
coverage = "^7.4.1"
responses = "^0.25.0"


[tool.poetry.group.app.dependencies]
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
redis = "^5.0.3"
fastapi-cache2 = "^0.2.1"
sqlalchemy = "^2.0.28"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = ".flake8"

[tool.nbqa.mutate]
black = 1
isort = 1

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
include = [
    "app/*",
    "bot/*",
    "mlds23_authorship_identification/*"
]
omit = [
    "**/__init__.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"